--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "licensechallenge",
   "version": "1.0.0",
   "description": "kit swEngineering 4-1 project",
-  "main": "index.js",
+  "main": "init.js",
   "scripts": {
+    "start": "babel-node init.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,28 @@
   "bugs": {
     "url": "https://github.com/rlawldud335/license_challenge/issues"
   },
-  "homepage": "https://github.com/rlawldud335/license_challenge#readme"
+  "homepage": "https://github.com/rlawldud335/license_challenge#readme",
+  "dependencies": {
+    "@babel/cli": "^7.13.14",
+    "@babel/core": "^7.13.14",
+    "@babel/node": "^7.13.13",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.13.12",
+    "babel-loader": "^8.2.2",
+    "body-parser": "^1.19.0",
+    "connect-mongo": "^4.4.1",
+    "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "helmet": "^4.4.1",
+    "mongoose": "^5.12.3",
+    "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
+    "passport-github": "^1.1.0",
+    "passport-kakao": "^1.0.1",
+    "passport-naver": "^1.0.6"
+  }
 }
