--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "licensechallenge",
+  "name": "licensechallengeapi",
   "version": "1.0.0",
   "description": "kit swEngineering 4-1 project",
   "main": "init.js",
@@ -9,20 +9,21 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rlawldud335/license_challenge.git"
+    "url": "git+https://github.com/rlawldud335/license_challenge_api.git"
   },
   "author": "KimJiyeong <rlawldud335@naver.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/rlawldud335/license_challenge/issues"
+    "url": "https://github.com/rlawldud335/license_challenge_api/issues"
   },
-  "homepage": "https://github.com/rlawldud335/license_challenge#readme",
+  "homepage": "https://github.com/rlawldud335/license_challenge_api#readme",
   "dependencies": {
     "@babel/cli": "^7.13.14",
     "@babel/core": "^7.13.14",
     "@babel/node": "^7.13.13",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.13.12",
+    "aws-sdk": "^2.889.0",
     "babel-loader": "^8.2.2",
     "body-parser": "^1.19.0",
     "connect-mongo": "^4.4.1",
@@ -33,6 +34,8 @@
     "helmet": "^4.4.1",
     "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
