--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "body-parser": "^1.19.0",
     "connect-mongo": "^4.4.1",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
