--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "aws-sdk": "^2.889.0",
     "babel-loader": "^8.2.2",
     "babel-node": "0.0.1-security",
+    "bcrypt": "^5.0.1",
     "bebel": "^1.1.4",
     "body-parser": "^1.19.0",
     "connect-mongo": "^4.4.1",
@@ -38,6 +39,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "helmet": "^4.4.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
