--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@babel/node": "^7.13.13",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.13.12",
-    "aws-sdk": "^2.889.0",
+    "aws-sdk": "^2.911.0",
     "babel-loader": "^8.2.2",
     "babel-node": "0.0.1-security",
     "bcrypt": "^5.0.1",
@@ -36,6 +36,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "helmet": "^4.4.1",
@@ -51,5 +52,6 @@
     "passport-kakao": "^1.0.1",
     "passport-naver": "^1.0.6"
   },
-  "keywords": []
+  "keywords": [],
+  "devDependencies": {}
 }
