--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@babel/node": "^7.13.13",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.13.12",
-    "aws-sdk": "^2.911.0",
+    "aws-sdk": "^2.912.0",
     "babel-loader": "^8.2.2",
     "babel-node": "0.0.1-security",
     "bcrypt": "^5.0.1",
@@ -40,6 +40,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "helmet": "^4.4.1",
+    "iamport": "^0.3.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
