--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "multer-s3": "^2.9.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
+    "node-schedule": "^2.0.0",
     "passport": "^0.4.1",
     "passport-github": "^1.1.0",
     "passport-kakao": "^1.0.1",
